--- a/deployment.yaml
+++ b/deployment.yaml
@@ -6,6 +6,11 @@ spec:
   selector:
     matchLabels:
       run: copadubo
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 25%
+      maxSurge: 25%
   replicas: 1
   template:
     metadata:
