--- a/deployment.yaml
+++ b/deployment.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
         - name: copadubo-view
-          image: 130593/copadubo-view:c2611c2
+          image: 130593/copadubo-view:${IMAGE_VERSION}
           ports:
             - containerPort: 3000
               protocol: TCP
