--- a/deployment.yaml
+++ b/deployment.yaml
@@ -20,7 +20,7 @@ spec:
       containers:
         - name: copadubo-view
           image: 130593/copadubo-view:latest
-          imagePullPolicy: "Always"
+          imagePullPolicy: Always
           ports:
             - containerPort: 3000
               protocol: TCP
