--- a/deployment.yaml
+++ b/deployment.yaml
@@ -9,8 +9,8 @@ spec:
   strategy:
     type: RollingUpdate
     rollingUpdate:
-      maxUnavailable: 50%
-      maxSurge: 50%
+      maxUnavailable: 0
+      maxSurge: 2
   replicas: 2
   template:
     metadata:
