--- a/deployment.yaml
+++ b/deployment.yaml
@@ -7,7 +7,10 @@ spec:
     matchLabels:
       run: copadubo
   strategy:
-    type: Recreate
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 50%
+      maxSurge: 50%
   replicas: 2
   template:
     metadata:
