--- a/deployment.yaml
+++ b/deployment.yaml
@@ -17,10 +17,11 @@ spec:
       labels:
         run: copadubo
     spec:
+      terminationGracePeriodSeconds: 30
       containers:
         - name: copadubo-view
           image: 130593/copadubo-view:latest
-          imagePullPolicy: Always
+          imagePullPolicy: "Always"
           ports:
             - containerPort: 3000
               protocol: TCP
